--- a/index.html
+++ b/index.html
@@ -56,9 +56,80 @@
 
 
 
-    <main>
-      .
-    </main>
+    <main class="product-grid">
+      <div class="product-box">
+          <img src="img/batom.png" alt="Batom Matte" class="product-image">
+          <div class="product-details">
+              <h2 class="product-title">Batom Matte</h2>
+              <p class="product-price">R$ 29,90</p>
+              <button class="buy-button">Comprar</button>
+          </div>
+      </div>
+
+      <div class="product-box">
+          <img src="img/paleta.png" alt="Paleta de Sombras" class="product-image">
+          <div class="product-details">
+              <h2 class="product-title">Paleta de Sombras</h2>
+              <p class="product-price">R$ 59,90</p>
+              <button class="buy-button">Comprar</button>
+          </div>
+      </div>
+
+      <div class="product-box">
+          <img src="img/baseL.png" alt="Base Líquida" class="product-image">
+          <div class="product-details">
+              <h2 class="product-title">Base Líquida</h2>
+              <p class="product-price">R$ 49,90</p>
+              <button class="buy-button">Comprar</button>
+          </div>
+      </div>
+
+      <div class="product-box">
+          <img src="img/mascara.png" alt="Máscara de Cílios" class="product-image">
+          <div class="product-details">
+              <h2 class="product-title">Máscara de Cílios</h2>
+              <p class="product-price">R$ 39,90</p>
+              <button class="buy-button">Comprar</button>
+          </div>
+      </div>
+
+      <div class="product-box">
+          <img src="img/delineador.png" alt="Delineador Líquido" class="product-image">
+          <div class="product-details">
+              <h2 class="product-title">Delineador Líquido</h2>
+              <p class="product-price">R$ 24,90</p>
+              <button class="buy-button">Comprar</button>
+          </div>
+      </div>
+
+      <div class="product-box">
+          <img src="img/Pó.png" alt="Pó Compacto" class="product-image">
+          <div class="product-details">
+              <h2 class="product-title">Pó Compacto</h2>
+              <p class="product-price">R$ 34,90</p>
+              <button class="buy-button">Comprar</button>
+          </div>
+      </div>
+
+      <div class="product-box">
+          <img src="img/iluminador.png" alt="Iluminador" class="product-image">
+          <div class="product-details">
+              <h2 class="product-title">Iluminador</h2>
+              <p class="product-price">R$ 44,90</p>
+              <button class="buy-button">Comprar</button>
+          </div>
+      </div>
+
+      <div class="product-box">
+          <img src="img/blushC.png" alt="Blush Cremoso" class="product-image">
+          <div class="product-details">
+              <h2 class="product-title">Blush Cremoso</h2>
+              <p class="product-price">R$ 39,90</p>
+              <button class="buy-button">Comprar</button>
+          </div>
+      </div>
+  </main>
+
 
     <footer>
       <div id="footer_content">
