--- a/forms.html
+++ b/forms.html
@@ -13,7 +13,7 @@
 
   <header>
     <nav class="nav-form">
-      <a class="logo-form" href="/index.html">Logo</a>
+      <a class="logo-form" href="index.html">Logo</a>
     </nav>
   </header>
 
